--- a/style.css
+++ b/style.css
@@ -39,17 +39,17 @@ fieldset {
         padding: .5rem;
         border-radius: 1rem;
         border: none;
-        color: oklch(20.8% 0.042 265.755); /*muda a cor aq*/
+        color: oklch(20.8% 0.042 265.755); 
     }
 
     input:focus {
-        outline: 2px solid oklch(12.9% 0.042 264.695); /*muda a cor aq*/
+        outline: 2px solid oklch(12.9% 0.042 264.695); 
         
         
     }
 
     input::placeholder {
-        color: oklch(44.6% 0.043 257.281); /*muda a cor aq*/
+        color: oklch(44.6% 0.043 257.281); 
 
     }
 
@@ -64,5 +64,36 @@ fieldset {
     input[type=checkbox],
     input[type=radio]{
         display: inline-block;
+        outline: none;
+    }
+
+    }
+
+fieldset:nth-of-type(2) > div{
+    margin-bottom: 2rem;
+    
+    h2{
+        margin-bottom: 1rem;
+    }
+
+     textarea{
+        display: block;
+        margin-top: 1rem;
+        border-radius: 1rem;
+        border: none;
+        outline: none;
+        padding: 1rem;
+        resize: none;
+    }
+    }
+
+    textarea:focus{
+        outline: 2px solid oklch(12.9% 0.042 264.695); 
+    }
+
+    select{
+        padding: .8rem;
+        border-radius: 1rem;
+        border: none;
         outline: none;
     }
