estoiu com muito sono, nao sei se esta muito certo, mas e isso ai

--- a/style.css
+++ b/style.css
@@ -97,3 +97,25 @@ fieldset:nth-of-type(2) > div{
         border: none;
         outline: none;
     }
+
+     button{
+        margin-bottom: 2rem;
+        padding: .6rem 1rem;
+        background: oklch(39.8% 0.07 227.392); /*muda a cor aq*/
+        border: none;
+        border-radius: 1rem;
+        color: #fff;
+        font-weight: 700;
+        font-size: 1.6rem;
+    }
+
+    button:hover{
+        background: oklch(52% 0.105 223.128); /*muda a cor aq*/
+        transition: ease-in-out .3s;
+        cursor: pointer;
+    }
+    @media(max-width: 768px){
+        #page{
+            padding-inline: 2rem;
+        }
+    }
